header-extendednavigation alignment fix in tablet

--- a/less/widgets/widget-navigation.less
+++ b/less/widgets/widget-navigation.less
@@ -20,8 +20,8 @@
     align-self: auto;
     @media @tablet {
         display: block;
-        top: 20px;
-        position: absolute;
+        top: 0px;
+        position: relative;
         right: 0;
     }
 }
@@ -364,7 +364,7 @@
 .bk-pt-home {
     .header-extendednavigation {
         @media @tablet {
-            right: 20px;
+            right: 0px;
         }
     }
     .navigation-toggle {
